--- a/index.html
+++ b/index.html
@@ -84,9 +84,33 @@
                     sint. Velit officia consequat duis enim 
                     velit mollit.</p>
             </div>
-            
+
        </div>
 
+    </section>
+
+
+    <section class="bottom-area">
+
+        <div class="get-update">
+            <h1>Get My Updates</h1>
+            <h3>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim</h3>
+        </div>
+
+        <div class="button">
+            <button id="email">Email</button>
+            <button id="subscribe">Subscribe</button>
+        </div>
+
+    </section>
+
+    <section class="footer-background">
+        <footer class="footer-area">
+            <h1>Be Humble</h1>
+            <h3>I'm gonna do it</h3>
+        </footer>
+    
     </section>
 
 
